--- a/.github/workflows/action-newman.yml
+++ b/.github/workflows/action-newman.yml
@@ -12,8 +12,8 @@ on:
 jobs:
 
   test-api:
-  
+
     uses: Vis-Rodrigues/workflow-template/.github/workflows/test-api-newman.yml@main
-    inputs:
-      collection: postman_collection
-      environment: postman_environment_prd
+    # inputs:
+    #   collection: postman_collection
+    #   environment: postman_environment_prd
