--- a/.github/workflows/action-newman.yml
+++ b/.github/workflows/action-newman.yml
@@ -14,3 +14,6 @@ jobs:
   newman-test:
   
     uses: Vis-Rodrigues/workflow-template/.github/workflows/test-api-newman.yml@main
+      inputs:
+        collection: postman_collection
+        environment: postman_environment_prd
