--- a/.github/workflows/action-newman.yml
+++ b/.github/workflows/action-newman.yml
@@ -12,12 +12,11 @@ on:
 jobs:
 
   newman-test:
-    steps:
-      - uses: Vis-Rodrigues/workflow-template/.github/workflows/test-api-newman.yml@main
-        with:
-          collection: postman_collection
-          environment: postman_environment_prd
+    uses: Vis-Rodrigues/workflow-template/.github/workflows/test-api-newman.yml@main
+    with:
+      collection: postman_collection
+      environment: postman_environment_prd
 
-      - uses: Vis-Rodrigues/workflow-template/.github/workflows/deploy-github-page.yml@main
-        with:
-          publish_dir: '.'
+    uses: Vis-Rodrigues/workflow-template/.github/workflows/deploy-github-page.yml@main
+    with:
+      publish_dir: '.'
